re PR rtl-optimization/22002 (internal consistency failure with -funroll-loops)

PR rtl-optimization/22002
	* combine.c (distribute_notes): Detect cases where a reg dies
	two or more times in a bb, including on the insn we are combining,
	and place the death note on the correct range.

From-SVN: r106921